Add feature Authentication and Authorization

--- a/MachineMonitoring.Api/appsettings.json
+++ b/MachineMonitoring.Api/appsettings.json
@@ -1,4 +1,10 @@
 {
+  "JWT": {
+    "SecretKey": "hLPqig1GqObo2SHXqTeCrvpcjFVKFwUH",
+    "Issuer": "MachineMonitoring",
+    "Audience": "MachineMonitoring-Users",
+    "ExpirationInMinutes": 60
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
